[package]
authors = ["Russ Garrett <russ@garrett.co.uk>"]
edition = "2018"
readme = "README.md"
name = "tilda-stm"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
panic-reset = "0.1.0"
panic-semihosting = "0.5.3"
embedded-hal = "0.2.2"
cortex-m-semihosting = "0.3.5"
nb = "0.1.2"
stm32f0xx-hal = { version = "0.15.2", features = ["rt", "stm32f042"] }
usb-device = "0.2.5"
usbd-serial = "0.1"
stm32-usbd = { version = "0.4.0", features = ["stm32f042xx"] }
stm32-device-signature = {version = "0.3.0", features = ["stm32f0"]}

[[bin]]
name = "tilda-stm"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = false # this significantly reduces flash use but probably messes up debugging more
